test_programs/compile_failure/noirc_frontend_tests_turbofish_trait_function_with_turbofish_on_trait_gives_error/src/main.nr

    trait Foo<T> {
        fn foo(_x: T) -> Self;
    }

    impl<T> Foo<T> for i32 {
        fn foo(_x: T) -> Self {
            1
        }
    }

    fn main() {
        let _: i32 = Foo::<bool>::foo(1);
    }
    